Stops crashing and invokes command.
Needed to declare the WhenAny after the command binding or you'll get an
invoke command on a null string, which causes a 'splosion!

Also needed to make the TextBox update on PropertyChanged, rather than
LostFocus, because at the moment we can't really lose focus.

--- a/ReactiveFlickr/MainWindow.xaml
+++ b/ReactiveFlickr/MainWindow.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         
         <TextBox Grid.Row="0"
-                 Text="{Binding SearchText}" />
+                 Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
         
         <ListView Grid.Row="1" />
         
