--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="FlickrSearch.MainWindow"
+﻿<Window x:Class="ReactiveFlickr.Desktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:FlickrSearch="clr-namespace:FlickrSearch"
+        xmlns:Desktop="clr-namespace:ReactiveFlickr.Desktop"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance FlickrSearch:FlickrSearchViewModel}"
         Title="MainWindow" Height="350" Width="525">
     
     <Window.Resources>
-        <FlickrSearch:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
+        <Desktop:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
     </Window.Resources>
     
     <Grid>
