--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -13,18 +13,31 @@
         <Desktop:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
         <Desktop:BitmapSourceConverter x:Key="bitmapSourceConverter" />
     </Window.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <TextBox Grid.Row="0"
-                 Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
-                 Margin="10"
-                 Padding="4,0"
-                 FontSize="20" />
+
+        <Grid Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBox
+                Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
+                Padding="4,0"
+                FontSize="20"
+                Margin="0, 0, 10, 0" />
+            
+            <Button Grid.Column="1"
+                    Padding="4"
+                    Content="Search"
+                    Command="{Binding Search}" />
+            
+        </Grid>
         
         <ItemsControl Grid.Row="1" ItemsSource="{Binding Images}">
             <ItemsControl.ItemTemplate>
@@ -51,18 +64,36 @@
         
         <Grid Grid.Row="1"
                     Visibility="{Binding IsLoading, Converter={StaticResource boolToVisibilityConverter}}"
-                    Background="#D0FFFFFF">           
-            <TextBlock Text="Loading..."
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       FontSize="24" />           
+                    Background="#D0FFFFFF">
+            <StackPanel HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                
+                <TextBlock Text="Searching..."
+                           TextAlignment="Center"
+                           FontSize="24"
+                           Margin="0, 0, 0, 10" />
+
+                <ProgressBar IsIndeterminate="True"
+                             Height="20"
+                             Width="150" />
+
+            </StackPanel>            
         </Grid>
-        
-        <TextBlock Grid.Row="1"
-                   Text="Error"
-                   HorizontalAlignment="Center"
-                   Visibility="{Binding ShowError, Converter={StaticResource boolToVisibilityConverter}}" />
-        
-        
+
+        <Grid Grid.Row="1"
+                    Visibility="{Binding ShowError, Converter={StaticResource boolToVisibilityConverter}}"
+                    Background="#D0FFFFFF">
+            <StackPanel HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+
+                <TextBlock Text=":("
+                           TextAlignment="Center"
+                           Foreground="DarkGray"
+                           FontSize="70"
+                           Margin="0, 0, 0, 10" />
+
+            </StackPanel>
+        </Grid>
+
     </Grid>
 </Window>
