--- a/Mobile/Resources/layout/ImageItem.axml
+++ b/Mobile/Resources/layout/ImageItem.axml
@@ -5,10 +5,12 @@
     android:layout_height="fill_parent">
     <ImageView
         android:id="@+id/image"
-        android:layout_width="72dp"
-        android:layout_height="72dp" />
+        android:layout_width="96dp"
+        android:layout_height="96dp" />
     <TextView
         android:id="@+id/title"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
