--- a/Mobile/Resources/layout/Main.axml
+++ b/Mobile/Resources/layout/Main.axml
@@ -6,16 +6,16 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_margin="8dp">
         <EditText
             android:id="@+id/searchText"
-            android:paddingLeft="4dp"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="fill_parent" />
         <Button
             android:id="@+id/searchButton"
-            android:padding="4dp"
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:text="@string/search" />
