--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:ReactiveFlickr="clr-namespace:ReactiveFlickr;assembly=ReactiveFlickr"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance ReactiveFlickr:FlickrSearchViewModel}"
-        Title="MainWindow" Height="538" Width="633">
+        Title="ReactiveFlickr" Height="538" Width="633">
     
     <Window.Resources>
         <Desktop:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
