--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -2,23 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:Desktop="clr-namespace:ReactiveFlickr.Desktop"
-        xmlns:ReactiveFlickr="clr-namespace:ReactiveFlickr;assembly=ReactiveFlickr"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance ReactiveFlickr:FlickrSearchViewModel}"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
         Title="ReactiveFlickr" Height="538" Width="633">
     
     <Window.Resources>
-        <Desktop:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
-        <Desktop:BitmapSourceConverter x:Key="bitmapSourceConverter" />
-        
-        <DataTemplate x:Key="imageTemplate">
-            <Image Source="{Binding Image, Converter={StaticResource bitmapSourceConverter}}"
-                   Height="150"
-                   Width="150"
-                   ToolTip="{Binding Title}" />
-        </DataTemplate>
         <ControlTemplate x:Key="scrollViewTemplate">
             <ScrollViewer>
                 <ItemsPresenter />
@@ -27,7 +14,6 @@
         <ItemsPanelTemplate x:Key="gridViewTemplate">
             <WrapPanel IsItemsHost="True" />
         </ItemsPanelTemplate>
-        
     </Window.Resources>
 
     <Grid>
